--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,11 +14,11 @@ services:
 
   frontend:
     build:
-      context: ./frontend
+      context: ./frontendView
     ports:
       - "5173:5173"
     volumes:
-      - ./frontend:/app
+      - ./frontendView:/app
       - /app/node_modules
     depends_on:
       - backend
